# cascadeguard-actions

./: .yamllint.yml  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-image.yaml  build.yaml  check-dry-run.yaml  check.yaml  ci-test.yaml  ci.yml  enforce-actions-policy.yaml  release.yaml  release.yml  sbom.yml  scheduled-scan.yaml  scorecard.yml
block-sensitive-paths/: README.md
check-upstream/: action.yml
generate-build-matrix/: action.yml
lib/: matrix.py  resolve.py
lib/tests/: __init__.py  test_matrix.py  test_resolve.py
resolve-image/: action.yml  resolve.py
scan-cve/: action.yml
scan-issues/: README.md  action.yml
scan-report/: README.md  action.yml
setup-cascadeguard/: action.yml
setup-grype/: README.md  action.yml
setup-syft/: README.md  action.yml
tests/: conftest.py  test_scan_issues.py  test_scan_report.py
tests/fixtures/: grype-critical-high.json  trivy-high.json
