[project]
name = "cascadeguard-actions-tests"
version = "0.1.0"
description = "Acceptance tests for cascadeguard-actions composite actions"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    # Install the cascadeguard CLI from the scan-subcommands branch:
    # pip install "git+https://github.com/cascadeguard/cascadeguard.git@CAS-81/scan-cli-subcommands#subdirectory=app"
    # (handled by CI workflow; conftest.py resolves the workspace path for local dev)
]

[tool.pytest.ini_options]
testpaths = ["tests", "lib/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
